# secunda-task

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  dump.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-08-01_added_activity.py  2025-08-01_added_buildings_table.py  2025-08-01_init.py  2025-08-02_added_organisation.py  2025-08-02_added_organization.py
src/: main.py  schemas.py  unitofwork.py
src/api/: dependencies.py  exception_handlers.py
src/api/v1/endpoints/: __init__.py  activity.py  building.py  organization.py  schemas.py
src/common/environment/: config.py
src/core/: config.py
src/core/config/: __init__.py  app.py  database.py  enums.py  environment.py
src/core/config/logging/: __init__.py  config.py  enums.py  factory.py
src/database/: engine.py  logging.py
src/database/models/: __init__.py  activity.py  base.py  building.py  organization.py  phone_number.py  tables.py
src/repositories/: __init__.py  activity.py  base.py  building.py  exceptions.py  organization.py
src/schemas/: activity.py  building.py  exceptions.py  organization.py  phone_number.py
src/services/: __init__.py  activity.py  base.py  building.py  exceptions.py  organization.py
